--- a/chatapp-fe/package.json
+++ b/chatapp-fe/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "frontend",
   "private": true,
@@ -12,6 +11,7 @@
   },
   "dependencies": {
     "chat-app-yt": "file:..",
+    "chatapp": "file:..",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
